fix(left menu): adjusted left menu dividers
Left menu dividers were too small at certain breakpoints so, they were adjusted to be longer

--- a/client/src/components/desktop/leftmenu/LeftMenu.scss
+++ b/client/src/components/desktop/leftmenu/LeftMenu.scss
@@ -44,6 +44,10 @@
   width: 70%;
   height: 0.5px;
   background-color: rgb(0, 0, 0);
+
+  @media screen and ("max-width: 1700px") {
+    width: 100%;
+  }
 }
 
 .left-post-btn {
